remove cellpadding and cellspacing, fixes #149

--- a/app/assets/stylesheets/active_scaffold_layout.css
+++ b/app/assets/stylesheets/active_scaffold_layout.css
@@ -13,8 +13,9 @@ margin: 5px 0;
 
 .active-scaffold table {
 width: 100%;
-border-collapse: separate;
+border-collapse: collapse;
 }
+.active-scaffold td, .active-scaffold th { padding: 0; }
 
 .active-scaffold a,
 .active-scaffold a:visited {
